Rename the script folder to bin folder

--- a/config/rfc-client.properties
+++ b/config/rfc-client.properties
@@ -24,8 +24,8 @@ client.event.executor.size = 8
 #----------------------------------------------------------------------------------------
 # The kind of the channel selection type. (optional)
 #----------------------------------------------------------------------------------------
-#client.channel.selection.type = round_robin
-client.channel.selection.type = workload
+#client.channel.selection.type = workload
+client.channel.selection.type = round_robin
 
 #----------------------------------------------------------------------------------------
 # The indication of whether stream compression will be enabled. 
