Use Commons Configuration and support the property files which can be auto-reload by Observer pattern.

--- a/src/test/resources/rpc-simulator.properties
+++ b/src/test/resources/rpc-simulator.properties
@@ -28,4 +28,4 @@ client.sample.length = 500
 # The frequency mode that a RPC client sends requests to a RPC server according to. 
 # The optionals are as follows: urgent / heavy / normal / idle
 #----------------------------------------------------------------------------------------
-client.request.mode = heavy
+client.request.mode = normal
